--- a/style.css
+++ b/style.css
@@ -26,6 +26,41 @@ h4
 	margin-bottom: 15px;
 }
 
+p
+{
+	font-size: 12px;
+}
+
+.row .stars-outer, .container .stars-outer 
+{
+    position: relative;
+    display: inline-block;
+    font-size: 0.7rem; 
+}
+.row .stars-inner, .container .stars-inner 
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0; 
+}
+.row .stars-outer::before, .container .stars-outer::before 
+{
+    content: "\f005 \f005 \f005 \f005 \f005";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #ccc; 
+}
+.row .stars-inner::before, .container .stars-inner::before 
+{
+    content: "\f005 \f005 \f005 \f005 \f005";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #FBCC7C; 
+}
+
 .myButton, .filterButton
 {
 	color: white;
@@ -71,8 +106,8 @@ h4
 /* Set the size of the div element that contains the map */
 #map 
 {
- height: 600px;  /* The height is 400 pixels */
- width: 600px; 
+ height: 500px;
+ width: 500px; 
  margin-top: 20px;
 }
 
