--- a/style.css
+++ b/style.css
@@ -26,9 +26,34 @@ h4
 	margin-bottom: 15px;
 }
 
+h5
+{
+	cursor: pointer;
+	text-transform: uppercase;
+}
+
+h5:hover
+{
+	color : #FBCC7C;
+}
+
+h6
+{
+	text-transform: uppercase;
+	font-size: 25px;
+}
+
+article:hover
+{
+	border: 1px solid grey;
+	box-shadow: 1px 1px 1px 1px grey;
+}
+
 p
 {
-	font-size: 12px;
+	font-family:"Lato",sans-serif;
+	color : #696969;
+	font-size: 13px;
 }
 
 .row .stars-outer, .container .stars-outer 
@@ -98,11 +123,20 @@ p
 	margin-top: 20px;
 }
 
+#myModalImg
+{
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
 .addResto
 {
 	margin-top: 20px;
 	margin-bottom: 15px;
 }
+
 /* Set the size of the div element that contains the map */
 #map 
 {
